test/langtools/tools/javac/datum/NoAddFieldsCanBeDeclaredInDatumTest.out
NoAddFieldsCanBeDeclaredInDatumTest.java:9:13: compiler.err.record.fields.must.be.in.header
NoAddFieldsCanBeDeclaredInDatumTest.java:9:14: compiler.err.expected: '('
NoAddFieldsCanBeDeclaredInDatumTest.java:13:9: compiler.err.illegal.start.of.type
NoAddFieldsCanBeDeclaredInDatumTest.java:13:19: compiler.err.invalid.meth.decl.ret.type.req
NoAddFieldsCanBeDeclaredInDatumTest.java:17:16: compiler.err.illegal.start.of.type
NoAddFieldsCanBeDeclaredInDatumTest.java:19:1: compiler.err.expected4: class, interface, enum, record
6 errors
